final changes done by deepak